# TinyLLVM

./: .gitignore  CMakeLists.txt  COMPILER.md  LICENSE  Makefile  README.md
include/: buffer_overflow_detector.h  chaos_injection_middleware.h  context_corruptor_middleware.h  eventchains.h  eventchains_platform.h  input_fuzzer_middleware.h  integer_overflow_fuzzer.h  logging_middleware.h  memory_monitor_middleware.h  resource_limit_middleware.h  timing_middleware.h  tinyllvm_ast.h  tinyllvm_compiler.h  use_after_free_detector.h
src/: eventchains.c  tinyllvm_ast.c  tinyllvm_codegen_c.c  tinyllvm_codegen_ir.c  tinyllvm_lexer.c  tinyllvm_parser.c  tinyllvm_typechecker.c
tests/: examples_coretiny.c  test_compile_and_save.c  test_full_compiler.c  test_ir_generation.c  test_with_middleware.c  tinyllvm_ast_test.c  tinyllvm_lexer_test.c
